[gd_scene load_steps=3 format=2]

[ext_resource path="res://Skripte/Aktionen/Spieler_Schutz.gd" type="Script" id=1]
[ext_resource path="res://Bilder/Standardspielfiguren/Weiteres/Regenschirm.png" type="Texture" id=2]

[node name="Schutz" type="Area2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="Schutz_Dauer" type="Timer" parent="."]

[node name="Schutz_Bild" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 4.62007, -13.3469 )
scale = Vector2( 0.3184, 6.99986 )
polygon = PoolVector2Array( -60.3328, -1.93427, 32.9901, -2.07577, 79.2112, 1.68512, -96.2807, 1.68512 )
[connection signal="draw" from="." to="." method="_on_Schutz_draw"]
[connection signal="timeout" from="Schutz_Dauer" to="." method="_on_Schutz_Dauer_timeout"]
